--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            
+        </nav>
     </header>
-    <main></main>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
