--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                Numquam laudantium temporibus voluptatum dolores, ut dolorem 
             </p>
-            <hr width="40px" align="left">
+            <hr width="40px">
             <div id="big-box">
                 <div id="small-box">
 
@@ -104,7 +104,7 @@
         <section id="blog"></section>
 
         <!-- contact section -->
-        <section id="contact">
+         <section id="contact">
             <h2>Contact Us</h2>
             <form action="" method="">
                 <input type="text" placeholder="first name" name="firstName">
