--- a/index.html
+++ b/index.html
@@ -70,22 +70,32 @@
                 <div class="cards">
                     <div class="iconica"><i class="fa-brands fa-github"></i></div>
                     <h2>Web Development</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
                 </div>
                 <div class="cards">
-
+                    <div class="iconica"><i class="fa-brands fa-codepen"></i></i></div>
+                    <h2>Web Design</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
                 </div>
                 <div class="cards">
-
-                </div>
-            
-                <div class="cards">
-
+                    <div class="iconica"><i class="fa-regular fa-file-video"></i></div>
+                    <h2>Video Editing</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
                 </div>
                 <div class="cards">
-
+                    <div class="iconica"><i class="fa-solid fa-camera"></i></div>
+                    <h2>Photography</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
                 </div>
                 <div class="cards">
-                    
+                    <div class="iconica"><i class="fa-brands fa-apple"></i></div>
+                    <h2>App Developing</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+                </div>
+                <div class="cards">
+                    <div class="iconica"><i class="fa-brands fa-github"></i></div>
+                    <h2>SEO Expart</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
                 </div>
             </div>
         </section>
