--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="services-text">
                 <h4>SERVICES</h4>
                 <h2>My Services</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy text.
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy texts.
                 </p>
                 <hr>
             </div>
