--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+
+    <!-- CSS External Link -->
     <link rel="stylesheet" href="./styles/main.css">
+
+    <!-- Google External Links -->
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/4f0f0b91f9.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header id="header" class="horizontal">
@@ -63,7 +68,7 @@
                 <h2>My Services</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy texts.
                 </p>
-                <hr>
+                <hr color="#FF4A57">
             </div>
             
             <div id="grid">
@@ -101,7 +106,15 @@
         </section>
 
         <!-- about section -->
-        <section id="about"></section>
+        <section id="about">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy texts.
+                </p>
+                <hr color="#FF4A57">
+            </div>
+
+        </section>
 
         <!-- skills section -->
         <section id="skills"></section>
