--- a/index.html
+++ b/index.html
@@ -107,13 +107,43 @@
 
         <!-- about section -->
         <section id="about">
-            <div class="about-text">
+            <div class="about-container-one">
                 <h2>About Me</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy texts.
                 </p>
                 <hr color="#FF4A57">
             </div>
 
+            <div id="about-container-two">
+                <div class="ab-image">
+                    <img src="./images/man-02.png" alt="">
+                </div>
+
+                <div class="ab-text">
+                    <h2>Hi There</h2>
+                    <p>
+                        In id nulla magna. Nullam posuere fermentum mattis. Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis
+                    </p>
+                    <p>
+                        nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis porta sem turpis quis leo. Nulla in feugiat elit
+                    </p>
+
+                    <div class="contact-table">
+                        <div class="contact-columns">
+                            
+                        </div>
+                        <div class="contact-columns">
+
+                        </div>
+                        <div class="contact-columns">
+                            
+                        </div>
+                        <div class="contact-columns">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- skills section -->
