updated and completed the about section

--- a/index.html
+++ b/index.html
@@ -130,16 +130,28 @@
 
                     <div class="contact-table">
                         <div class="contact-columns">
-                            
+                            <p>
+                                <span>Name:</span> <br>
+                                Jonathan Doe
+                            </p>
                         </div>
                         <div class="contact-columns">
-
+                            <p>
+                                <span>Phone:</span> <br>
+                                +1 023 454 345
+                            </p>
                         </div>
                         <div class="contact-columns">
-                            
+                            <p>
+                                <span>Email:</span> <br>
+                                example@domain.com
+                            </p>
                         </div>
                         <div class="contact-columns">
-
+                            <p>
+                                <span>LinkedIn:</span> <br>
+                                Jonathan_123
+                            </p>
                         </div>
                     </div>
                 </div>
