--- a/index.html
+++ b/index.html
@@ -159,7 +159,15 @@
         </section>
 
         <!-- skills section -->
-        <section id="skills"></section>
+        <section id="skills">
+            <div id="left-skills">
+
+            </div>
+
+            <div id="right-skills">
+                
+            </div>
+        </section>
 
         <!-- portfolio section -->
         <section id="portfolio"></section>
